# pythagorean

./: .gitignore  pythagorean.cabal  stack.yaml
src/: Calcs.hs  DateCalcs.hs  NumCalcs.hs  Reports.hs  Tables.hs
src/Tables/: PrimeTable.hs  PrimeTables.hs
test/: Calcs_Test.hs  Tables_Test.hs
