name:                pythagorean
version:             0.1.0.0
synopsis:            Library for numerical text processing
description:         Please see README.md
homepage:            https://github.com/emaphis/pythagorean#readme
license:             BSD3
license-file:        LICENSE
author:              Ed Maphis
maintainer:          emaphis85@gmail.com
copyright:           2016 Ed Maphis
category:            General
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Tables
                     , Calcs
  build-depends:       HUnit >= 1.3.1.1
                     , QuickCheck >= 2.8.1
                     , base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , split >= 0.2.3
  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010

executable pythagorean-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N  -fno-warn-type-defaults
  build-depends:       HUnit >= 1.3.1.1
                     , base
                     , containers >= 0.5.6.2
                     , pythagorean
                     , split >= 0.2.3
  default-language:    Haskell2010

test-suite pythagorean-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       HUnit >= 1.3.1.1
                     , QuickCheck >= 2.8.1
                     , base
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , pythagorean
                     , split >= 0.2.3
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N  -fno-warn-type-defaults
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pythagorean
